--- a/LibraryApp/Shared/NavMenu.razor
+++ b/LibraryApp/Shared/NavMenu.razor
@@ -17,14 +17,19 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="books">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Books
+                <span class="oi oi-book" aria-hidden="true"></span> Books
             </NavLink>
         </div>
         <AuthorizeView Roles="Admin">
             <Authorized>
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="users-manager">
-                        <span class="oi oi-list-rich" aria-hidden="true"></span> Users
+                    <NavLink class="nav-link" href="users">
+                        <span class="oi oi-people" aria-hidden="true"></span> Users
+                    </NavLink>
+                </div>
+                <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="data">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Data
                     </NavLink>
                 </div>
             </Authorized>
