--- a/LibraryApp/Pages/Index.razor
+++ b/LibraryApp/Pages/Index.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
-@using LibraryApp.Data.Migrations
-@inject Migrator Migrator
+@using LibraryApp.Data
+@using LibraryApp.Data.Models
+@inject IMongoRepository<Book> BookRepository
 
 <PageTitle>Index</PageTitle>
 
@@ -16,11 +17,13 @@
 
 <h1>Welcome to the Library</h1>
 
+<h3>What awaits you...</h3>
+
 <RadzenCard Class="rz-shadow-2">
     <div class="row">
         <div class="my-3 my-lg-5">
             <RadzenArcGauge Style="width: 100%; height: 250px;">
-                <RadzenArcGaugeScale Step="20" Min="0" Max="260" MinorStep="2" Radius="1.5" TickPosition=@(GaugeTickPosition.None) Y="0.9" Margin="0">
+                <RadzenArcGaugeScale Step="20" Min="0" Max="60" MinorStep="2" Radius="1.5" TickPosition=@(GaugeTickPosition.None) Y="0.9" Margin="0">
                     <RadzenArcGaugeScaleValue Value=@value ShowValue=@true>
                         <Template Context="pointer">
                             <h4>
@@ -34,55 +37,18 @@
     </div>
 </RadzenCard>
 
-<RadzenCard>
-    <div class="row">
-        <RadzenChart>
-            <RadzenPieSeries Data="@revenue" Title="Revenue" CategoryProperty="Quarter" ValueProperty="Revenue">
-                <RadzenSeriesDataLabels Visible="@true" />
-            </RadzenPieSeries>
-        </RadzenChart>
-    </div>
-</RadzenCard>
-
 @code
 {
     bool showValue = true;
-    double value = 100;
+    double value;
     IEnumerable<GaugeTickPosition> tickPositions = Enum.GetValues(typeof(GaugeTickPosition)).Cast<GaugeTickPosition>();
     GaugeTickPosition tickPosition = GaugeTickPosition.Outside;
 
-    class DataItem
-    {
-        public string Quarter { get; set; } = String.Empty;
-        public double Revenue { get; set; }
-    }
 
-    DataItem[] revenue = new DataItem[] {
-        new DataItem
-        {
-            Quarter = "Q1",
-            Revenue = 30000
-        },
-        new DataItem
-        {
-            Quarter = "Q2",
-            Revenue = 40000
-        },
-        new DataItem
-        {
-            Quarter = "Q3",
-            Revenue = 50000
-        },
-        new DataItem
-        {
-            Quarter = "Q4",
-            Revenue = 80000
-        },
-    };
 
     protected override Task OnInitializedAsync()
     {
-        Migrator.MigrateAll();
+        value = BookRepository.AsQueryable().Count();
         return Task.CompletedTask;
     }
 }
